--- a/src/App.css
+++ b/src/App.css
@@ -256,6 +256,25 @@ a {
   flex: 0.8;
 }
 
+.payment__details > form {
+  max-width: 400px;
+}
+
+.payment__details h3 {
+  padding-bottom: 20px;
+}
+
+.payment__details > form > div > button {
+  background: #f0c14b;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  border-color: #a88734 #9c7e31 #846a29;
+  font-weight: bolder;
+  color: #111;
+  margin-top: 10px;
+}
 
 /* --------------- LOGIN --------------- */
 .login {
@@ -319,4 +338,33 @@ a {
   height: 30px;
   margin-top: 10px;
   border: 1px solid darkgray;
+}
+
+
+/* --------------- ORDERS --------------- */
+.orders {
+  padding: 20px 80px;
+}
+
+.orders h1 {
+  margin: 30px 0;
+}
+
+.order {
+  padding: 40px;
+  margin: 20px 0;
+  border: 1px solid lightgray;
+  background-color: white;
+  position: relative;
+}
+
+.order__id {
+  position: absolute;
+  top: 40px;
+  right: 20px;
+}
+
+.order__total {
+  font-weight: 500;
+  text-align: right;
 }
